# HTS_ver6

./: CMakeLists.txt  CMakePresets.json  README.md  config.ini  resources.qrc  update_translations.sh
.claude/: settings.local.json
docs/: ARCHITECTURE.md  구현해달라할거  위젯  지피티링크
resources/i18n/: account_en_US.ts  account_ko_KR.ts  auth_en_US.ts  auth_ko_KR.ts  common_en_US.ts  common_ko_KR.ts  market_en_US.ts  market_ko_KR.ts  order_en_US.ts  order_ko_KR.ts
resources/proto/: auth_events.proto  events.proto  order_api.proto  order_commons.proto
resources/themes/: dark.json  light.json
src/: main.cpp
src/core/application/: Application.cpp  Application.h
src/core/factory/: ViewModelFactory.cpp  ViewModelFactory.h
src/core/menu/: AccountMenu.cpp  AccountMenu.h  MarketMenu.cpp  MarketMenu.h  OrderMenu.cpp  OrderMenu.h  ToolMenu.cpp  ToolMenu.h
src/core/model/: Constants.h  Result.h
src/core/notification/: NotificationManager.cpp  NotificationManager.h
src/core/window/: MenuBarManager.cpp  MenuBarManager.h  ThemeManager.cpp  ThemeManager.h  WindowManager.cpp  WindowManager.h  WorkspaceManager.cpp  WorkspaceManager.h
src/domain/model/: AccountSnapshot.h  MarketTick.h  OHLCV.h  Session.h
src/domain/service/account/: AccountQueryService.cpp  AccountQueryService.h  IAccountQueryService.h
src/domain/service/auth/: AuthCommandService.cpp  AuthCommandService.h  IAuthCommandService.h
src/domain/service/chart/: ChartDataService.cpp  ChartDataService.h  IChartDataService.h
src/domain/service/market/: IMarketDataService.h  MarketDataService.cpp  MarketDataService.h
src/domain/service/order/: IOrderCommandService.h  OrderCommandService.cpp  OrderCommandService.h
src/infrastructure/cache/: InMemoryCache.cpp  InMemoryCache.h
src/infrastructure/config/: Config.cpp  Config.h
src/infrastructure/config/translate/: TranslationManager.cpp  TranslationManager.h
src/infrastructure/database/: OHLCVRepository.cpp  OHLCVRepository.h
src/infrastructure/network/: GrpcChannelPool.cpp  GrpcChannelPool.h  GrpcClientBase.h  GrpcNetworkManager.cpp  GrpcNetworkManager.h  NetworkExecutor.cpp  NetworkExecutor.h
src/infrastructure/repository/: DataBase.cpp  DataBase.h
src/infrastructure/session/: SessionManager.cpp  SessionManager.h
src/infrastructure/streaming/: StreamingClient.cpp  StreamingClient.h
src/ui/account/: AccountView.cpp  AccountView.h
src/ui/auth/: LoginWindow.cpp  LoginWindow.h  loginwindow.ui
src/ui/chart/: ChartWidget.cpp  ChartWidget.h
src/ui/order/: OrderWidget.cpp  OrderWidget.h
src/ui/tools/calculator/: CalculatorWidget.cpp  CalculatorWidget.h  StockCalculator.cpp  StockCalculator.h
src/ui/tools/calendar/: CalendarWidget.cpp  CalendarWidget.h  calendar.cpp  calendar.h
src/ui/tools/clock/: ClockWidget.cpp  ClockWidget.h  DigitalClock.cpp  DigitalClock.h
src/ui/tools/note/: NoteWidget.cpp  NoteWidget.h
src/ui/widget/: DomainWidget.cpp  DomainWidget.h
src/ui/window/: MainWindow.cpp  MainWindow.h  mainwindow.ui
src/viewmodel/account/: AccountManager.cpp  AccountManager.h  AccountViewModel.cpp  AccountViewModel.h  BalanceViewModel.cpp  BalanceViewModel.h  PositionViewModel.cpp  PositionViewModel.h
src/viewmodel/auth/: LoginViewModel.cpp  LoginViewModel.h
src/viewmodel/chart/: ChartViewModel.cpp  ChartViewModel.h
src/viewmodel/order/: OrderHistoryViewModel.cpp  OrderHistoryViewModel.h  OrderViewModel.cpp  OrderViewModel.h
